Fix social icon so they aren't blurry when scaling

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 html {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: 17px;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
 
 .content {
@@ -54,7 +56,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.5rem;
+  font-size: 2rem;
   opacity: 0.5;
   width: 2rem;
   height: 2rem;
@@ -62,17 +64,18 @@ html {
   will-change: opacity, transform;
   color: black;
   text-decoration: none;
+  transform: scale(0.75);
 }
 
 .social a:hover {
   opacity: 1;
-  transform: scale(1.25);
+  transform: scale(1);
   color: #0071e3;
 }
 
 .social a:active {
   opacity: 1;
-  transform: scale(1.1);
+  transform: scale(1);
   color: #0071e3;
 }
 
